// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the SquareTile component passes an onPressItem prop 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 6,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`the SquareTile component should render 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 6,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "width": "100%",
      }
    }
  />
  <BVLinearGradient
    colors={
      Array [
        0,
        4278190080,
      ]
    }
    locations={
      Array [
        0.3,
        1,
      ]
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "transparent",
          "bottom": 20,
          "color": "#F8F7F4",
          "fontFamily": "OpenSans-Bold",
          "fontSize": 15.75,
          "left": 20,
          "lineHeight": 17.75,
          "position": "absolute",
        }
      }
    >
      So cool!
    </Text>
  </BVLinearGradient>
</View>
`;

exports[`the SquareTile component should render without text 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 6,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "width": "100%",
      }
    }
  />
</View>
`;
